# nn-descent-cpp

./: .gitignore  CMakeLists.txt  WORKSHOP_PAPER_DRAFT.md  compute_gt.py  create_draft_docx.py  plot_all.py  plot_distcomps_vs_updates.py  plot_gist100k_construction_time.py  plot_gist100k_rptree_search.py  plot_gist100k_search.py  plot_gist1m.py  plot_gist1m_init_compare.py  plot_gist1m_qps.py  plot_gist1m_search.py  plot_gist1m_search_log.py  pynndescent_recall_bench.py  results_gist100k_avg.txt  results_gist1m.txt  results_sift.txt  run_gist1m.sh  run_gist_construct_graphs.sh  run_gist_construct_rerun.sh  run_gist_mc_sweep.sh  run_gist_search.sh  run_sift1m.sh  run_sift1m_mc_sweep.sh  run_sift_construct_graphs.sh  run_sift_mc_sweep.sh
docs/: Algorithm.tex  Related_work.tex  analysis.tex  experiments.tex  references.bib
include/: distance.h  diversify.h  graph_io.h  graph_search.h  initializer.h  nn_descent.h  projection_filter.h  recall.h  types.h
report_plots/: fig1_time_vs_recall.py  fig2_filtering_vs_sampling.py  fig3_rptree_time_vs_recall.py  fig4_dist_comps.py  fig5_search.py  make_all.py  parse.py  style.py
results/: SIFT1M_construction_result.txt  gist100k_random_nofilter_build.txt  gist100k_random_proj_pt080_search.txt  gist100k_random_proj_pt090_search.txt  gist100k_random_proj_pt095_search.txt  gist100k_random_proj_pt099_search.txt  gist100k_random_search_baseline.txt  gist100k_rptree_nofilter_search.txt  gist100k_rptree_pt080_search.txt  gist100k_rptree_pt090_search.txt  gist100k_rptree_pt095_search.txt  gist100k_rptree_pt099_search.txt  gist1m_log.txt  (+110 more)
(+30 files in other folders)
